--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -15,6 +15,12 @@
             margin-bottom: -24px;
         }
     }
+    &__error--image {
+      text-align: center;
+      @include tablet-and-up {
+        text-align: left;
+      }
+    }
 }
 
 .input, 
